# SKYMATRIX

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/skymatrix/: anomaly.hpp  cli_parser.hpp  connected_comp.hpp  image.hpp  pipeline.hpp  prefix_sum.hpp  quadtree.hpp  top_k.hpp  union_find.hpp
src/: anomaly.cpp  connected_comp.cpp  image.cpp  main.cpp  pipeline.cpp  prefix_sum.cpp  quadtree.cpp  top_k.cpp  union_find.cpp
test_images/: amazon_deforestation.pgm  coastal_change.pgm  deforestation_sim.pgm  flood_detection.pgm  real_deforestation_processed.pgm  real_deforestation_raw.pgm  real_subtle_before_eq.pgm  real_subtle_equalized.pgm  test_1024.pgm  test_512.pgm  urban_expansion.pgm  wildfire_burn_scar.pgm
tools/: generate_test_image.cpp
web/backend/: main.py
web/frontend/: index.html  package-lock.json
web/frontend/src/: App.jsx  index.css
web/frontend/src/components/: Header.jsx  Home.jsx  ImageUploader.jsx  ImageViewer.jsx  LoadingOverlay.jsx  RegionsTable.jsx  StatsPanel.jsx  TimingChart.jsx  TutorialSystem.jsx
web/frontend/src/hooks/: useAnalysis.js
web/frontend/src/utils/: pgm.js
